# anvil

./: Cargo.toml  GRAMMAR.md  LICENSE  README.md
crates/anvil-cli/: Cargo.toml
crates/anvil-cli/src/: main.rs
crates/anvil-context/: Cargo.toml
crates/anvil-context/src/: lib.rs  symbol.rs  tool.rs
crates/anvil-parse/: Cargo.toml
crates/anvil-parse/src/: anvil.pest  ast.rs  lib.rs  parser.rs
crates/anvil-parse/src/anvil/: anvil.pest  ast.rs  mod.rs  parse.rs
crates/anvil-parse/src/expr/: ast.rs  eval.rs  expr.pest  mod.rs  parse.rs
crates/anvil-runtime/: Cargo.toml
crates/anvil-runtime/src/: executor.rs  expression.rs  interpreter.rs  lib.rs  planner.rs  repl.rs
crates/anvil-runtime/src/tools/: args.rs  count.rs  describe.rs  distinct.rs  drop.rs  fill.rs  filter.rs  input.rs  intersect.rs  join.rs  limit.rs  mod.rs  output.rs  print.rs  project.rs  register.rs  schema.rs  select.rs  sort.rs  sql.rs  tool.rs  union.rs  values.rs
crates/anvil-tools/: Cargo.toml
crates/anvil-tools/src/: filter.rs  input.rs  join.rs  lib.rs  output.rs  show.rs  tool.rs  value.rs
examples/: count.anvil  filter.anvil  funcs.anvil  inout-csv.anvil  inout-json.anvil  inout-pqt.anvil  join.anvil  project.anvil  select.anvil  sort.anvil  sql.anvil
scripts/: count.anvil  describe.anvil  factorial.anvil  files.anvil  filter.anvil  funcs.anvil  jester.anvil  join.anvil  print.anvil  project.anvil  schema.anvil  select.anvil  show.anvil  sql.anvil
