[package]
name = "anvil-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "anvil"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
datafusion = "51.0.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

anvil-parse = { path = "../anvil-parse" }
anvil-runtime = { path = "../anvil-runtime" }
