[package]
name = "anvil-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "anvil"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
petgraph = "0.8.3"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

anvil-context = { path = "../anvil-context" }
anvil-parse = { path = "../anvil-parse" }
anvil-runtime = { path = "../anvil-runtime" }
