[package]
name = "anvil-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
datafusion = { version = "51.0.0", features = ["avro", "sql"] }
petgraph = "0.8.3"
string-interner = "0.19.0"

anvil-context = { path = "../anvil-context" }
anvil-parse = { path = "../anvil-parse" }
